[metadata]
name = cue
author = Victoria Popic
url = https://github.com/PopicLab/cue2
licence = AGPL-3
description = Deep learning framework for structural variant discovery
long_description = file: README.md
long_description_content_type = text/markdown
version = attr: cue.__version__

[options]
requires_python >=3.9
install_requires =
    bitarray==2.9.2
    intervaltree==3.1.0
    joblib==1.4.2
    mappy==2.28
    matplotlib==3.9.1
    numpy==1.24.4
    opencv-python==4.10.0.84
    pycocotools==2.0.8
    pysam==0.22.1
    PyYAML==6.0.1
    scipy==1.13.1
    torch==2.0.1
    torchvision==0.15.2
    tqdm==4.66.4
packages = find:

[options.packages.find]
include =
    cli
    img
    nn
    seq
    utils

[options.entry_points]
console_scripts =
    cue = cue.__main__:main
